2010-02-24: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/PrivateKey.pm: document the sign_digest() method
 * lib/Mail/DKIM/Algorithm/*: use sign_digest() rather than
   sign_sha1_digest()

2010-01-23: Jason Long <jlong@messiah.edu>
 * t/public_key.t: test that DNS failure reason is given, when
   DNS returns no results
 * lib/Mail/DKIM/DNS.pm: bugfix (introduced by async_dns branch):
   preserve $@ in case of no error

2010-01-23: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/{DNS,Signature,PublicKey,Policy}.pm: merged my
   "async dns" branch

--BEGIN "ASYNC DNS" branch
2009-07-10: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Policy.pm: new fetch_async method, seems to work

2009-07-10: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signature.pm: new fetch_public_key method,
   which starts an asynchronous query for the public key
   referenced by this signature; redesign get_public_key to
   know how to complete the query

2009-07-10: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/PublicKey.pm: new fetch_async method: starts a
   query and returns a subref that when called will complete the
   query

2009-07-10: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DNS.pm: new query_async method: starts a query and
   returns a subref that when called will complete the query
--END "ASYNC DNS" branch

2009-12-14: Jason Long <jlong@messiah.edu>
 * MANIFEST: include sample_mime_lite.pl script in tarball

2009-09-08: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DNS.pm: restart timer after a DNS lookup; based on a
   patch contributed by Mark Martinec

 -- VERSION 0.37 --

2009-09-02: Jason Long <jlong@messiah.edu>
 * t/adsp.t: a test script for checking AuthorDomainPolicy.pm
 * lib/Mail/DKIM/AuthorDomainPolicy.pm: use d= tag not i= tag when
   checking for first-party signatures; fix for testing() method
   not found error; fix for "all" and "discardable" not doing the
   right thing
   
2009-08-14: Jason Long <jlong@messiah.edu>